# LightRAG

./: .gitignore  AGENTS.md  CLAUDE.md  README-zh.md  README.md  SECURITY.md  docker-build-push.sh  docker-compose-full.yml  docker-compose-no-gpu.yml  docker-compose.podman.yml  docker-compose.yml  env.docker-compose-full  env.docker-compose-no-gpu  env.example  pyproject.toml  requirements-offline-llm.txt  requirements-offline-storage.txt  requirements-offline.txt
.github/: CONTRIBUTING.md
.github/workflows/: copilot-setup-steps.yml  test.yml  tests.yml
docs/: AdvancedFeatures.md  DOCKER_INSTALLATION_GUIDE.md  DockerDeployment.md  EMAIL_INGESTION.md  FrontendBuildGuide.md  Hybrid-Token-Authentication-Implementation-Plan.md  INTEGRATION_GUIDE.md  KEYCLOAK_SSO_SETUP.md  LINUX_INSTALLATION_GUIDE.md  LightRAG-API-Server-zh.md  LightRAG-API-Server.md  MIGRATION_TO_1.5.0.md  MultiSiteDeployment.md  OAuth2-SSO-Authentication.md  OPENAI_COMPATIBLE_API.md  OfflineDeployment.md  PER_USER_API_KEYS.md  ProgramingWithCore.md  README.md  ROLLBACK.md  UPSTREAM_CATCHUP_PLAN.md  WEBUI_WALKTHROUGH.md
examples/: lightrag_ag2_multiagent_demo.py
k8s-deploy/lightrag/: values.yaml
lightrag/: __init__.py  exceptions.py  parser_routing.py  utils.py
lightrag/api/: .obo_allowlist.example  OBO_ALLOWLIST.md  auth.py  config.py  dependencies.py  lightrag_server.py  oauth2.py  obo_allowlist.py  utils_api.py  workspace_manager.py
lightrag/api/routers/: __init__.py  admin_routes.py  apikey_routes.py  document_routes.py  email_routes.py  graph_routes.py  ollama_api.py  openai_api.py  query_routes.py
lightrag/api/webui/: index.html
lightrag/api/webui/assets/: _baseUniq-BLQp5EV9.js  _baseUniq-CkM0h1BH.js  _baseUniq-DUPArIlJ.js  _baseUniq-D_5MaoGX.js  architectureDiagram-VXUJARFQ-7bsIgtCO.js  architectureDiagram-VXUJARFQ-BxcfW5dO.js  architectureDiagram-VXUJARFQ-CzccrlvO.js  architectureDiagram-VXUJARFQ-Dl0KpNA2.js  blockDiagram-VD42YOAC-BKQpFbjo.js  blockDiagram-VD42YOAC-CpeuhGR4.js  blockDiagram-VD42YOAC-CwjeZbfs.js  blockDiagram-VD42YOAC-PtWPfbr8.js  c4Diagram-YG6GDRKO-C16XpAvy.js  c4Diagram-YG6GDRKO-DqHoDDBq.js  c4Diagram-YG6GDRKO-YDgK1dwJ.js  c4Diagram-YG6GDRKO-nZjE_FYO.js  chunk-4BX2VUAB-B1S-wTXE.js  chunk-4BX2VUAB-BW3jxfdG.js  chunk-4BX2VUAB-CIgF6yGd.js  chunk-4BX2VUAB-DACP6UJe.js  chunk-55IACEB6-CDrB3DfM.js  chunk-55IACEB6-CZ4Z7Zck.js  chunk-55IACEB6-DjqCau8Z.js  chunk-55IACEB6-ma28uTni.js  chunk-B4BG7PRW-D1GdFiXa.js  chunk-B4BG7PRW-XM_LwgVq.js  chunk-B4BG7PRW-mRNQToAr.js  chunk-B4BG7PRW-t9KQeU8e.js  chunk-DI55MBZ5-CRkt_ahy.js  chunk-DI55MBZ5-CxyLOddg.js  chunk-DI55MBZ5-DykjQ1SJ.js  chunk-DI55MBZ5-roVs9RuY.js  chunk-FMBD7UC4-154tFUjE.js  chunk-FMBD7UC4-BIBCcD3x.js  chunk-FMBD7UC4-FFyp9IF5.js  chunk-FMBD7UC4-OpGU7UR2.js  chunk-QN33PNHL-BTdZ8f9E.js  chunk-QN33PNHL-CBOIU1n-.js  chunk-QN33PNHL-CCqZwkQW.js  chunk-QN33PNHL-DJ_9yW0P.js  (+157 more)
lightrag/tools/: check_initialization.py  download_cache.py
lightrag/tools/lightrag_visualizer/: README-zh.md  README.md
lightrag_webui/: package-lock.json  vite.config.ts
lightrag_webui/src/: App.tsx  AppRouter.tsx
lightrag_webui/src/api/: lightrag.ts
lightrag_webui/src/features/: LoginPage.tsx  OAuth2Callback.tsx
lightrag_webui/src/lib/: constants.ts
lightrag_webui/src/locales/: ar.json  en.json  fr.json  zh.json  zh_TW.json
lightrag_webui/src/stores/: state.ts
scripts/backup/: pre-merge-snapshot.sh
tests/: README.md  conftest.py  enterprise_smoke.py  test_bedrock_llm.py
tests/api/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
